update : placeholder text

--- a/builder/templates/home.html
+++ b/builder/templates/home.html
@@ -97,7 +97,7 @@
             name="input_sentence"
             id="id_input_sentence"
             rows="4"
-            placeholder="Tell me about your professional experience..."
+            placeholder='Tell me about your experience, e.g., "I made a web service using Django."'
           ></textarea>
         </div>
 
